2012-06-04  Niibe Yutaka  <gniibe@fsij.org>

	Implement CRC32 check for firmware update.
	* src/usb_ctrl.c (download_check_crc32): New.
	* regnual/regnual.c (calc_crc32): New.
	(regnual_ctrl_write_finish): Call calc_crc32.
	* tool/gnuk_upgrade.py (crc32): New.
	(regnual.download): Check crc32code.

	* regnual/regnual.c (regnual_ctrl_write_finish): Bug fix.

2012-06-01  Niibe Yutaka  <gniibe@fsij.org>

	Support firmware update with public key authentication.
	* tool/gnuk_upgrade.py (gpg_sign): New.
	* tool/gnuk_put_binary_libusb.py (main): Support firmware update
	key registration.

	Update of reGNUal.
	* regnual/regnual.c (main): Follow the change of usb_lld_init.
	(regnual_config_desc): Include interface descriptor.
	(usb-strings.c.inc): Change the file name.
	* regnual/Makefile (regnual.o): Depend on sys.h.
	* src/configure (usb-strings.c.inc): ifdef-out
	gnuk_revision_detail and gnuk_config_options (for reGNUal).
	* src/usb_desc.c (USB_STRINGS_FOR_GNUK): Define.

	USB bug fixes.
	* src/usb_ctrl.c (gnuk_usb_event): Bug fix for handling
	USB_EVENT_CONFIG.  Do nothing when current_conf == value.
	* src/usb_lld.c (std_clear_feature): Bug fix.  Always clear DTOG.
	(usb_lld_init): New argument for FEATURE.

2012-05-31  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl-0.14.0/library/rsa.c (rsa_pkcs1_verify): BUF size is
	256 (was: 1024).
	* src/call-rsa.c (rsa_verify): It's SIG_RSA_SHA1.
	* src/openpgp.c (cmd_external_authenticate): Follow the change of
	rsa_verify.

	Support "firmware update" keys.
	* src/flash.c (flash_write_binary): Support update keys.
	* src/gnuk.h (FILEID_UPDATE_KEY_0, FILEID_UPDATE_KEY_1)
	(FILEID_UPDATE_KEY_2,FILEID_UPDATE_KEY_3): New.
	* src/gnuk.ld.in (_updatekey_store): New.
	* src/openpgp.c (FILE_EF_UPDATE_KEY_0, FILE_EF_UPDATE_KEY_1)
	(FILE_EF_UPDATE_KEY_2, FILE_EF_UPDATE_KEY_3): New.
	(gpg_get_firmware_update_key): New.
	(cmd_read_binary): Support update keys and certificate.
	(modify_binary): New.