@@ -149,6 +149,8 @@ extern void flash_reset_counter (uint8_t counter_tag_nr);
 extern int flash_erase_binary (uint8_t file_id);
 extern int flash_write_binary (uint8_t file_id, const uint8_t *data, uint16_t len, uint16_t offset);
 
+#define FLASH_CH_CERTIFICATE_SIZE 2048
+
 /* Linker set these two symbols */
 extern uint8_t ch_certificate_start;
 extern uint8_t random_bits_start;
